--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.57.8"
+    "react-native": "0.57.8",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-navigation": "^1.1.493",
+    "react-native-qrcode": "^0.2.6",
+    "react-native-shadow": "^1.2.2",
+    "react-native-svg": "^8.0.10"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
