--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -29,7 +30,21 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
+}
+
+
+subprojects {
+  project.configurations.all {
+     resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'com.android.support'
+              && !details.requested.name.contains('multidex') ) {
+           details.useVersion "27.1.1"
+        }
+     }
+  }
 }
 
 
